# EDINET

./: .gitignore  EDINET.spec  Readme.md  Standardized.db  agents.md  config.json  config.py  config_Regression.json  financial_ratios_config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
classes/: EDINET.py  Regression.py  data.py  helper.py  yahoofinance.py
config/: app_config.json  app_state.json  config_Regression.json  database_paths.json  financial_ratios_config.json  run_config.example.json  run_config.json
docs/: Application Details.md  BUILDING.md  CHANGELOG.md  COST_ESTIMATE.md  Contributing.md  Frontend Architecture.md  LOGGING.md  RUNNING.md  Readme.md  agents.md
docs/Agent/: IDENTITY.md  (+1 more)
frontend-v2/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build.py  check_docs.py  sync_requirements.py  verify.py
src/: backtesting.py  data_processing.py  description_translation.py  edinet_api.py  logger.py  orchestrator.py  regression_analysis.py  screening.py  security_analysis.py  stockprice_api.py  utils.py  version.py  yahoofinance.py
tests/: _check_api.py  capture_screenshots.py  conftest.py  test_EDINET.py  test_Regression.py  test_backtesting.py  test_backtesting_api.py  test_backtesting_web.py  test_data.py  test_data_processing.py  test_description_translation.py  test_edinet_api.py  test_helper.py  test_integration_full.py  test_orchestrator.py  test_orchestrator_services.py  test_playwright_orchestrator.py  test_playwright_portfolio.py  test_playwright_screening.py  test_playwright_security_analysis.py  test_portfolio_additional.py  test_portfolio_api.py  test_portfolio_browser.py  test_portfolio_parser.py  test_portfolio_performance.py  test_portfolio_schema.py  test_portfolio_state.py  test_portfolio_transactions.py  test_regression_analysis.py  test_rolling_screening_backtest.py  test_screening.py  test_screening_api.py  test_security_analysis.py  test_security_analysis_api.py  test_stockprice_api.py  test_taxonomy_processing.py  test_transactions_browser.py  test_ui.py  test_ui_screenshots.py  test_ui_tk_smoke.py  (+4 more)
tools/: check_portfolio_routes.py  start_fresh.bat  verify_portfolio.py
ui/: Flet.readme  app.py  app.readme  generate_icons.py
ui_tk/: __init__.py  app.py  controllers.py  style.py  utils.py
(+268 files in other folders)
